--- a/data/glade/friends_manager.glade
+++ b/data/glade/friends_manager.glade
@@ -1,7 +1,6 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--*- mode: xml -*-->
+<?xml version="1.0"?>
 <glade-interface>
+  <requires-version lib="gtk+" version="2.12"/>
   <widget class="GtkDialog" id="lists_dialog">
     <property name="visible">True</property>
     <property name="title" translatable="yes">Users lists</property>
@@ -26,10 +25,11 @@
                     <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
                     <property name="shadow_type">GTK_SHADOW_IN</property>
                     <child>
-                      <widget class="GtkTreeView" id="following_list">
+                      <widget class="GtkTreeView" id="friends_and_followers">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="enable_search">False</property>
+                        <property name="reorderable">True</property>
+                        <property name="search_column">1</property>
                       </widget>
                     </child>
                   </widget>
@@ -81,11 +81,11 @@
             <child>
               <widget class="GtkLabel" id="label_followers">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Following</property>
+                <property name="label" translatable="yes">Friends &amp; Followers</property>
               </widget>
               <packing>
-                <property name="type">tab</property>
                 <property name="tab_fill">False</property>
+                <property name="type">tab</property>
               </packing>
             </child>
           </widget>
