--- a/data/glade/main_window.glade
+++ b/data/glade/main_window.glade
@@ -148,7 +148,7 @@
                             <property name="icon_size">1</property>
                           </widget>
                         </child>
-                        <accelerator key="m" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+                        <accelerator key="d" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </widget>
                     </child>
                   </widget>
