--- a/data/glade/friends_manager.glade
+++ b/data/glade/friends_manager.glade
@@ -41,6 +41,7 @@
                     <child>
                       <widget class="GtkButton" id="follow_add">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="label" translatable="yes">gtk-add</property>
@@ -56,6 +57,7 @@
                     <child>
                       <widget class="GtkButton" id="follow_rem">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="label" translatable="yes">gtk-remove</property>
@@ -66,6 +68,21 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkButton" id="view_profile">
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="tooltip" translatable="yes">View the selected users details including their bio, friends, followers, tweets, and etc.</property>
+                        <property name="label" translatable="yes">gtk-about</property>
+                        <property name="use_stock">True</property>
+                        <property name="response_id">0</property>
+                      </widget>
+                      <packing>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                   </widget>
