--- a/data/glade/main_window.glade
+++ b/data/glade/main_window.glade
@@ -117,7 +117,7 @@
                             <property name="stock">gtk-jump-to</property>
                           </widget>
                         </child>
-                        <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+                        <accelerator key="at" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </widget>
                     </child>
                     <child>
