--- a/data/glade/followers_dialog.glade
+++ b/data/glade/followers_dialog.glade
@@ -1,17 +1,28 @@
 <?xml version="1.0"?>
 <interface>
-  <requires lib="gtk+" version="2.12"/>
+  <requires lib="gtk+" version="2.16"/>
+  <!-- interface-naming-policy toplevel-contextual -->
+  <object class="GtkListStore" id="following_store">
+    <columns>
+      <!-- column-name gchararray -->
+      <column type="gchararray"/>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+      <!-- column-name gpointer -->
+      <column type="gpointer"/>
+    </columns>
+  </object>
   <object class="GtkDialog" id="followers_dialog">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Users lists</property>
-    <property name="default_width">260</property>
-    <property name="default_height">225</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="title" translatable="yes">Users settings</property>
+    <property name="default_width">330</property>
+    <property name="default_height">295</property>
+    <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox5">
         <property name="visible">True</property>
         <child>
-          <object class="GtkNotebook" id="lists_notebook">
+          <object class="GtkNotebook" id="followers_notebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
@@ -22,46 +33,59 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="border_width">6</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                    <property name="shadow_type">GTK_SHADOW_IN</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="shadow_type">in</property>
                     <child>
                       <object class="GtkTreeView" id="following_list">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="reorderable">True</property>
+                        <property name="model">following_store</property>
+                        <property name="enable_search">False</property>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                            <property name="title">User</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn1-renderer1"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn2">
+                            <property name="title">Name</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn2-renderer1"/>
+                              <attributes>
+                                <attribute name="text">1</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
                   <object class="GtkHBox" id="hbox2">
                     <property name="visible">True</property>
                     <property name="spacing">5</property>
                     <child>
-                      <object class="GtkButton" id="follow_add">
+                      <object class="GtkButton" id="follow_rem">
+                        <property name="label" translatable="yes">gtk-remove</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="label">gtk-add</property>
+                        <property name="receives_default">True</property>
                         <property name="use_stock">True</property>
-                        <property name="response_id">0</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">5</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkButton" id="follow_rem">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="label">gtk-remove</property>
-                        <property name="use_stock">True</property>
-                        <property name="response_id">0</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">False</property>
                         <property name="position">1</property>
                       </packing>
                     </child>
@@ -69,7 +93,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="padding">4</property>
-                    <property name="pack_type">GTK_PACK_END</property>
+                    <property name="pack_type">end</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -92,23 +116,30 @@
         <child internal-child="action_area">
           <object class="GtkHButtonBox" id="dialog-action_area5">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="lists_close">
+                <property name="label" translatable="yes">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="label">gtk-close</property>
+                <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-5</property>
               </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </object>
     </child>
+    <action-widgets>
+      <action-widget response="-5">lists_close</action-widget>
+    </action-widgets>
   </object>
 </interface>
