--- a/data/glade/friends_manager.glade
+++ b/data/glade/friends_manager.glade
@@ -1,69 +1,117 @@
 <?xml version="1.0"?>
-<glade-interface>
-  <requires-version lib="gtk+" version="2.12"/>
-  <widget class="GtkDialog" id="friends_manager">
+<interface>
+  <requires lib="gtk+" version="2.16"/>
+  <!-- interface-naming-policy toplevel-contextual -->
+  <object class="GtkListStore" id="friends_manager_store">
+    <columns>
+      <!-- column-name gchararray -->
+      <column type="gchararray"/>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+      <!-- column-name gchararray2 -->
+      <column type="gchararray"/>
+      <!-- column-name gpointer -->
+      <column type="gpointer"/>
+    </columns>
+  </object>
+  <object class="GtkDialog" id="friends_manager">
     <property name="visible">True</property>
-    <property name="title" translatable="yes">Users lists</property>
-    <property name="default_width">260</property>
-    <property name="default_height">225</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="title" translatable="yes">Users settings</property>
+    <property name="default_width">330</property>
+    <property name="default_height">295</property>
+    <property name="type_hint">dialog</property>
     <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox5">
+      <object class="GtkVBox" id="dialog-vbox5">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkNotebook" id="lists_notebook">
+          <object class="GtkNotebook" id="friendss_manager_notebook">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <child>
-              <widget class="GtkVBox" id="vbox_followers">
+              <object class="GtkVBox" id="vbox_followers">
                 <property name="visible">True</property>
                 <child>
-                  <widget class="GtkScrolledWindow" id="following_list_scroll">
+                  <object class="GtkScrolledWindow" id="friends_manager_list_scroll">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="border_width">6</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
-                    <property name="shadow_type">GTK_SHADOW_IN</property>
+                    <property name="hscrollbar_policy">never</property>
+                    <property name="shadow_type">in</property>
                     <child>
-                      <widget class="GtkTreeView" id="friends_and_followers">
+                      <object class="GtkTreeView" id="friends_and_followers">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="reorderable">True</property>
-                        <property name="search_column">1</property>
-                      </widget>
+                        <property name="model">friends_manager_store</property>
+                        <property name="enable_search">False</property>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn1">
+                            <property name="title">User</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn1-renderer1"/>
+                              <attributes>
+                                <attribute name="text">0</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn2">
+                            <property name="title">Name</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn2-renderer1"/>
+                              <attributes>
+                                <attribute name="text">1</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn3">
+                            <property name="title">Are they following me too?</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn3-renderer1"/>
+                              <attributes>
+                                <attribute name="text">1</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
                     </child>
-                  </widget>
+                  </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
-                  <widget class="GtkHBox" id="hbox2">
+                  <object class="GtkHBox" id="hbox2">
                     <property name="visible">True</property>
                     <property name="spacing">5</property>
                     <child>
-                      <widget class="GtkButton" id="follow_add">
+                      <object class="GtkButton" id="follow_add">
+                        <property name="label" translatable="yes">gtk-add</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="label" translatable="yes">gtk-add</property>
                         <property name="use_stock">True</property>
-                        <property name="response_id">0</property>
-                      </widget>
+                      </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">5</property>
+                        <property name="position">0</property>
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkButton" id="follow_rem">
+                      <object class="GtkButton" id="follow_rem">
+                        <property name="label" translatable="yes">gtk-remove</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="label" translatable="yes">gtk-remove</property>
                         <property name="use_stock">True</property>
-                        <property name="response_id">0</property>
-                      </widget>
+                      </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">False</property>
@@ -71,66 +119,70 @@
                       </packing>
                     </child>
                     <child>
-                      <widget class="GtkButton" id="view_profile">
+                      <object class="GtkButton" id="view_profile">
+                        <property name="label" translatable="yes">gtk-about</property>
                         <property name="visible">True</property>
                         <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
-                        <property name="tooltip" translatable="yes">View the selected users details including their bio, friends, followers, tweets, and etc.</property>
-                        <property name="label" translatable="yes">gtk-about</property>
+                        <property name="tooltip_text" translatable="yes">View the selected users details including their bio, friends, followers, tweets, and etc.</property>
                         <property name="use_stock">True</property>
-                        <property name="response_id">0</property>
-                      </widget>
+                      </object>
                       <packing>
                         <property name="position">2</property>
                       </packing>
                     </child>
-                  </widget>
+                  </object>
                   <packing>
                     <property name="expand">False</property>
                     <property name="padding">4</property>
-                    <property name="pack_type">GTK_PACK_END</property>
+                    <property name="pack_type">end</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
-              </widget>
+              </object>
             </child>
-            <child>
-              <widget class="GtkLabel" id="label_followers">
+            <child type="tab">
+              <object class="GtkLabel" id="label_followers">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Friends &amp; Followers</property>
-              </widget>
+                <property name="label" translatable="yes">Manage Friends &amp; Followers</property>
+              </object>
               <packing>
                 <property name="tab_fill">False</property>
-                <property name="type">tab</property>
               </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area5">
+          <object class="GtkHButtonBox" id="dialog-action_area5">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
-              <widget class="GtkButton" id="lists_close">
+              <object class="GtkButton" id="lists_close">
+                <property name="label" translatable="yes">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-close</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-5</property>
-              </widget>
+              </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
             </child>
-          </widget>
+          </object>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
-      </widget>
+      </object>
     </child>
-  </widget>
-</glade-interface>
+    <action-widgets>
+      <action-widget response="-5">lists_close</action-widget>
+    </action-widgets>
+  </object>
+</interface>
