Greet-Tweet-Know 1.0.0a9: Friends Manager working!
Greet-Tweets-Know's 'Friend Manager is now working, uber woot!  I'm very proud of the code I created for generating the list of those you're following & those you follow.  Its truly beautiful, elegent, & effeciant.  I did put my emotions into it my desire to follow my intuition.  I was even pushed to make my code as beautiful as it is.  My new method is 'friends_manager_display_following_and_followers' truly is one of my works of art.

Greet-Tweet-Know's Friend Manager supports adding & removing friends & followers.  I've disabled its 'About' button, which will be used to popup to display the users profile information like their avatar, tweets, friends, followers, & etc.  Whatever I can get through Twitter's API but have to parse them through libXML.

I have also improved more of Greet-Tweet-Know's network & parsing methods.  I added checks into my networking stack to ensure Greet-Tweet-Know doesn't go over Twitter's API limits.  Right now I only have it checking while requesting multiple pages.  I will be pushing this through to all other networking requests.  I'm going to create my own network object to hold Greet-Tweet-Know's soup connection, accounts, and a consistant threaded GTimer.  But that'll wait.

I still have to finish my combined view, which should be pretty easy to do. And adding my menu bar.  Those will be my features for version 1.0.0aF.

I want to add support for Twitte's tweet HTTP methods.  Like making a tweet a 'fave', eg 'starred, adding the abilty to block users, and so much more that Twitter exposes via their XML HTTP requests resourses.

Than I want to start adding support for multiple accunts on multiple services.  So far that's my roadmap for version 1.0.1aF.  Though some of these features my make it iny current release, like adding 'My Faves' view, depending on how difficult they are.  Like adding a 'My Faves' view will only mean adding a define, an if condition, & adding the menu entry to

--- a/data/glade/friends_manager.glade
+++ b/data/glade/friends_manager.glade
@@ -10,6 +10,8 @@
       <column type="gchararray"/>
       <!-- column-name gchararray2 -->
       <column type="gchararray"/>
+      <!-- column-name gchararray3 -->
+      <column type="gchararray"/>
       <!-- column-name gpointer -->
       <column type="gpointer"/>
     </columns>
@@ -67,11 +69,22 @@
                         </child>
                         <child>
                           <object class="GtkTreeViewColumn" id="treeviewcolumn3">
-                            <property name="title">Are they following me too?</property>
+                            <property name="title">Am I following them?</property>
                             <child>
                               <object class="GtkCellRendererText" id="treeviewcolumn3-renderer1"/>
                               <attributes>
-                                <attribute name="text">1</attribute>
+                                <attribute name="text">2</attribute>
+                              </attributes>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkTreeViewColumn" id="treeviewcolumn4">
+                            <property name="title">Are they following me?</property>
+                            <child>
+                              <object class="GtkCellRendererText" id="treeviewcolumn4-renderer1"/>
+                              <attributes>
+                                <attribute name="text">3</attribute>
                               </attributes>
                             </child>
                           </object>
