--- a/data/glade/friends_manager.ui
+++ b/data/glade/friends_manager.ui
@@ -142,7 +142,9 @@
                         <property name="use_stock">True</property>
                       </object>
                       <packing>
-                        <property name="position">2</property>
+                        <property name="expand">False</property>
+			<property name="fill">False</property>
+			<property name="position">2</property>
                       </packing>
                     </child>
                   </object>
